<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~  Licensed under the MIT License.
  -->
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/get_started_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/edge_padding"
        android:text="@string/welcome" />

    <android.widget.ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_width"
        android:paddingVertical="@dimen/edge_padding"
        android:src="@drawable/ic_icon_unfilled"
        android:tint="?attr/colorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/edge_padding"
        android:text="@string/get_started" />

</android.widget.LinearLayout>